rs/ethexe/macros-tests/tests/snapshots/eth_event__eth_event_ethabi_only.snap
---
source: macros-tests/tests/eth_event.rs
expression: result
---
pub enum Events {
    #[annotate(codec = "ethabi")]
    MyEvent1 {
        #[annotate(indexed)]
        sender: sails::alloy_primitives::Address,
        amount: sails::alloy_primitives::U256,
    },
    #[annotate(codec = "ethabi")]
    MyEvent2,
}
impl sails::EthEvent for Events {
    const SIGNATURES: &'static [sails::gstd::EthEventExpo] = &[
        (
            "MyEvent1",
            <<(
                sails::alloy_primitives::Address,
                sails::alloy_primitives::U256,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            sails::keccak_const::Keccak256::new()
                .update("MyEvent1".as_bytes())
                .update(
                    <<(
                        sails::alloy_primitives::Address,
                        sails::alloy_primitives::U256,
                    ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME
                        .as_bytes(),
                )
                .finalize(),
        ),
        (
            "MyEvent2",
            <<() as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            sails::keccak_const::Keccak256::new()
                .update("MyEvent2".as_bytes())
                .update(
                    <<() as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME
                        .as_bytes(),
                )
                .finalize(),
        ),
    ];
    #[allow(unused)]
    fn topics(&self) -> sails::Vec<sails::alloy_primitives::B256> {
        match self {
            Events::MyEvent1 { sender, amount } => {
                let mut topics = sails::Vec::with_capacity(2usize);
                let (_, _, hash) = Self::SIGNATURES[0usize];
                topics.push(sails::alloy_primitives::B256::new(hash));
                topics.push(Self::topic_hash(sender));
                topics
            }
            Events::MyEvent2 => {
                let mut topics = sails::Vec::with_capacity(1usize);
                let (_, _, hash) = Self::SIGNATURES[1usize];
                topics.push(sails::alloy_primitives::B256::new(hash));
                topics
            }
        }
    }
    #[allow(unused)]
    fn data(&self) -> sails::Vec<u8> {
        match self {
            Events::MyEvent1 { sender, amount } => Self::encode_sequence(&(amount,)),
            Events::MyEvent2 => Self::encode_sequence(&()),
        }
    }
}
