rs/ethexe/macros-tests/tests/snapshots/eth_event__eth_event_scale_and_ethabi.snap
---
source: macros-tests/tests/eth_event.rs
expression: result
---
pub enum Events {
    MyEvent1(u128),
}
impl sails::SailsEvent for Events {
    fn encoded_event_name(&self) -> &'static [u8] {
        match self {
            Events::MyEvent1(..) => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 49u8]
            }
        }
    }
    fn entry_id(&self) -> u16 {
        match self {
            Events::MyEvent1(..) => 0u16,
        }
    }
    fn skip_bytes() -> usize {
        1
    }
}
impl sails::EthEvent for Events {
    const SIGNATURES: &'static [sails::gstd::EthEventExpo] = &[
        (
            "MyEvent1",
            <<(
                u128,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            sails::keccak_const::Keccak256::new()
                .update("MyEvent1".as_bytes())
                .update(
                    <<(
                        u128,
                    ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME
                        .as_bytes(),
                )
                .finalize(),
        ),
    ];
    #[allow(unused)]
    fn topics(&self) -> sails::Vec<sails::alloy_primitives::B256> {
        match self {
            Events::MyEvent1(f0) => {
                let mut topics = sails::Vec::with_capacity(1usize);
                let (_, _, hash) = Self::SIGNATURES[0usize];
                topics.push(sails::alloy_primitives::B256::new(hash));
                topics
            }
        }
    }
    #[allow(unused)]
    fn data(&self) -> sails::Vec<u8> {
        match self {
            Events::MyEvent1(f0) => Self::encode_sequence(&(f0,)),
        }
    }
}
