rs/ethexe/macros-tests/tests/snapshots/eth_event__eth_event_scale_only.snap
---
source: macros-tests/tests/eth_event.rs
expression: result
---
pub enum Events {
    #[annotate(codec = "scale")]
    MyEvent1(u128),
    #[annotate(codec = "scale")]
    MyEvent2,
}
impl sails::SailsEvent for Events {
    fn encoded_event_name(&self) -> &'static [u8] {
        match self {
            Events::MyEvent1(..) => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 49u8]
            }
            Events::MyEvent2 => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 50u8]
            }
        }
    }
    fn entry_id(&self) -> u16 {
        match self {
            Events::MyEvent1(..) => 0u16,
            Events::MyEvent2 => 1u16,
        }
    }
    fn skip_bytes() -> usize {
        1
    }
}
